--- a/src/app/view/home/home.component.html
+++ b/src/app/view/home/home.component.html
@@ -29,7 +29,7 @@
             class="items"
         >
             <a class="logo" routerLink="/">
-                <img src="assets/images/logo.png" alt="" />
+                <img src="assets/images/logo.svg" alt="" />
             </a>
             <a
                 class="menu-item"
