--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,14 +22,21 @@ body {
                 display: flex;
                 .buttons {
                     margin-left: auto;
-                    padding-top: 10px;
                 }
+            }
+            h1 {
+                font-family: "Roboto-Black";
+                margin-bottom: 10px;
             }
         }
         .formulario .mat-card {
             margin-bottom: 20px;
         }
-        .mat-card-subtitle,
+        .mat-card-subtitle {
+            font-size: 16px;
+            font-weight: bold;
+            color: $black;
+        }
         .mat-card-content {
             font-size: 16px;
             font-weight: bold;
@@ -46,6 +53,11 @@ body {
         text-decoration: unset;
         color: unset;
     }
+
+    h1 {
+        color: $primary;
+        text-transform: uppercase;
+    }
 }
 
 ::-webkit-scrollbar {
@@ -61,15 +73,21 @@ body {
     background: $black;
 }
 
-h1 {
-    font-family: "Roboto-Black" !important;
-    color: $primary;
-    text-transform: uppercase;
-    margin: 5px;
+.mat-sidenav-container {
+    position: relative;
+    background-color: white;
 }
 
-.mat-sidenav-container {
-    background-image: url("./assets/images/logo-opac.png");
+.mat-sidenav-container:before {
+    content: " ";
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0.2;
+    background-image: url("assets/images/logo.svg");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
@@ -109,7 +127,7 @@ button:hover {
         background-color: $primary;
     }
     &.mat-accent {
-        background-color: $light-gray;
+        background-color: $secondary;
     }
 }
 .mat-icon-button {
@@ -117,7 +135,7 @@ button:hover {
         color: $primary;
     }
     &.mat-accent {
-        color: $light-gray;
+        color: $secondary;
     }
 }
 
@@ -165,7 +183,7 @@ button:hover {
             cursor: pointer;
             &:hover {
                 text-decoration: underline;
-                color: $gray-blue;
+                color: $tertiary;
             }
             span {
                 margin: 5px;
@@ -377,7 +395,7 @@ button.mat-raised-button {
 
 .mat-tab-group {
     .mat-tab-header {
-        background-color: $gray-blue;
+        background-color: $tertiary;
         border-radius: 4px 4px 0 0;
         .mat-tab-label {
             color: white;
@@ -458,11 +476,22 @@ tbody .mat-list-base {
 }
 
 .login-backdrop {
+    position: relative;
     background-color: white;
-    background-image: url("./assets/images/logo-opac.png");
+}
+
+.login-backdrop:before {
+    content: " ";
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0.2;
+    background-image: url("assets/images/logo.svg");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
     background-size: 90% auto;
-    opacity: 0.95 !important;
 }
