Criando tema para escola CTEP

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -87,7 +87,7 @@ body {
     width: 100%;
     height: 100%;
     opacity: 0.2;
-    background-image: url("assets/images/logo.svg");
+    background-image: url("assets/images/logo.png");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
@@ -489,7 +489,7 @@ tbody .mat-list-base {
     width: 100%;
     height: 100%;
     opacity: 0.2;
-    background-image: url("assets/images/logo.svg");
+    background-image: url("assets/images/logo.png");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
