--- a/src/theming.scss
+++ b/src/theming.scss
@@ -1,12 +1,12 @@
 @import "~@angular/material/theming";
 @include mat-core();
 
-$primary: #393e46;
-$secondary: #c59000;
-$gray: #505762;
-$light-gray: #f7f7f7;
+$primary: #0f084b;
+$secondary: #78849e;
+$gray: #4d575b;
+$light-gray: #75848a;
 $black: #191716;
 $red: #520b03;
-$white: #f0f0f0;
+$white: #f0f8ff;
 $off-white: #edeeef;
-$tertiary: #f8b500;
+$tertiary: #4f7cac;
